[1.7.1-SNAPSHOT]

[1.7.0]
- [BREAKING] LayoutRuleset is now applied to both horizontal and vertical calculations
- [BREAKING] UI minHeight now includes padding + margin in check
- [BREAKING] TiledCollisionFactory now takes TiledMap as parameter
- [BREAKING] SlideIn/SlideOut animations now take duration as parameter
- [BREAKING] TiledCollisionMerger#isMergable now accepts TiledMap and TileLayer parameters
- (#74) Added TiledMapLoader for loading TiledMap instances via AssetManager
- Added AnimatedImage element to UI library
- Added new FlexDirections; ROW_REVERSE and CENTER
- Added Sprite#getAlpha() method
- Added jacocoTestReport for better code coverage reporting
- Added #equals method to ControllerButton implementations
- Added #equals and #hashcode methods to geometry classes
- TiledCollisionFactory can now return null to specify no collision
- Prototype beans no longer require setters/getters for dependency injection
- Fixed merging concurrency exception during object movement within concurrent QuadTrees
- Fixed incorrect Circle bounding box dimensions
- Fixed dependency injection validating injection too early
- Fixed typing text animation cutting off last character
- Fixed unnecessary Image render node layouts when setting same value for texture path
- Fixed Image#getTexturePath returning null
- Fixed duplicate notifications for CollisionPoint listeners
- Fixed XML deserialization constructor matching on Android
- Fixed transitionIn#initialise not being called during screen transitions
- (#53) Increased code coverage on Rectangle and Circle

[1.6.5]
- (#72) Fixed support for flipped tiles in Tiled object GID

[1.6.4]
- (#71) Fixed regression with missing setCenter method in shapes after 1.3 refactor
- Fixed child UI elements receiving mouseDown events when hidden

[1.6.3]
- Added additional UiElement defer method that accepts a duration
- UI defer operations can now be cancelled

[1.6.2]
- Added support for rotated + flipped tiles